<resources>
    <string name="app_name">Mokaf7a</string>
    <string name="login">تسجيل الدخول</string>
    <string name="password_hint">كلمة السر</string>
    <string name="email_hint">البريد الالكترونى</string>
    <string name="sign_up">إنشاء حساب جديد</string>
    <string name="branch">الفرع</string>
    <string name="name">الاسم</string>
    <string name="or">أو</string>
    <string name="sgin">تسجيل</string>
    <string name="entre">ادخل</string>
    <string name="report">تسجيل بلاغ</string>
    <string name="forget_pass">نسيت كلمة السر ؟</string>
    <string name="log_out_btn_txt">خروج</string>
    <string name="arabic_app_name">قوات مكافحة البرد</string>
    <string name="tab_text_1">احصائيات</string>
    <string name="tab_text_2">عرض البلاغات</string>

    <string name="dummy_far3">مصر_الجديدة</string>
    <string name="dummy_number">0</string>
    <string name="dummy_date">20–11–2020</string>
    <string name="dummy_area">طريق مصر اسكندرية الصحراوي</string>
    <string name="dummy_feedback">تم التعامل</string>

    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Mokaf7a is available. Please update to version </string>
    <string name="youAreNotUpdatedMessage1">  now</string>
    <string name="update">Update</string>
    <string name="tab_text_3">حملات</string>
</resources>
