<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/border_only_btn"
    android:padding="8dp">

    <TextView
        android:id="@+id/id_feedbackTV"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_jf"
        android:gravity="center"
        android:text="بلاغ 1 = تم التعامل"
        android:textAlignment="center"
        android:textColor="@color/whiteColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_feedbackTV">

        <TextView
            android:id="@+id/branchTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_far3"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="10sp"
            app:drawableEndCompat="@drawable/city"
            app:layout_constraintBottom_toBottomOf="@+id/areaTV"
            app:layout_constraintEnd_toStartOf="@+id/dateTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/areaTV" />

        <TextView
            android:id="@+id/dateTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_date"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="10sp"
            app:drawableEndCompat="@drawable/calendar_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/areaTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/branchTV"
            app:layout_constraintTop_toTopOf="@+id/areaTV" />

        <TextView
            android:id="@+id/areaTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_area"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="12sp"
            app:drawableEndCompat="@drawable/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateTV"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>