<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/border_only_btn"
    android:padding="5dp">

    <TextView
        android:id="@+id/locationTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/new_jf"
        android:gravity="center"
        android:text="@string/dummy_area"
        android:textAlignment="center"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTV"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/new_jf"
        android:gravity="center"
        android:text="@string/dummy_date"
        android:textAlignment="center"
        android:textColor="@color/mintGreen"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/locationTV" />

    <TextView
        android:id="@+id/branchTV"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/new_jf"
        android:gravity="center"
        android:text="@string/dummy_far3"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/dateTV" />

    <ImageButton
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/red_shape"
        android:padding="8dp"
        android:src="@drawable/close"
        app:layout_constraintBottom_toBottomOf="@+id/branchTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branchTV">

        <TextView
            android:id="@+id/girlsTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_number"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/restaurant"
            app:layout_constraintBottom_toBottomOf="@+id/casesCountTV"
            app:layout_constraintEnd_toStartOf="@+id/boysTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/casesCountTV" />

        <TextView
            android:id="@+id/boysTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_number"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/bus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/casesCountTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/girlsTV"
            app:layout_constraintTop_toTopOf="@+id/casesCountTV" />

        <TextView
            android:id="@+id/casesCountTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_number"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/cases"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/boysTV"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsLayout">

        <TextView
            android:id="@+id/mealsTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_number"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/food"
            app:layout_constraintBottom_toBottomOf="@+id/blanketsTV"
            app:layout_constraintEnd_toStartOf="@+id/clothesTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/blanketsTV" />

        <TextView
            android:id="@+id/clothesTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_number"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/hanger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blanketsTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mealsTV"
            app:layout_constraintTop_toTopOf="@+id/blanketsTV" />

        <TextView
            android:id="@+id/blanketsTV"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_btn"
            android:drawablePadding="8dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dummy_number"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/blankets"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/clothesTV"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>