<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_background"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gray_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="54dp"
        android:layout_marginVertical="64dp"
        android:background="@drawable/form_box"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/EmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/new_jf"
            android:text="@string/email_hint"
            android:textColor="@color/BlueColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/PasswordTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailTextView" />

        <TextView
            android:id="@+id/PasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/new_jf"
            android:text="@string/password_hint"
            android:textColor="@color/BlueColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/branchTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordTextView" />

        <TextView
            android:id="@+id/branchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/new_jf"
            android:text="@string/branch"
            android:textColor="@color/BlueColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/branchSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_chainStyle="packed" />

        <Spinner
            android:id="@+id/branchSpinner"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edittext"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/branchTextView" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/red_shape"
            android:fontFamily="@font/new_jf"
            android:onClick="newAccClick"
            android:text="إنشاء الحساب"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/branchSpinner" />


        <ImageView
            android:id="@id/imageView5"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="24dp"
            android:background="@color/whiteColor"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circular"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/new_jf"
            android:gravity="center"
            android:text="أو"
            android:textColor="@color/BlueColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.435"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <Button
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/new_jf"
            android:onClick="goToLogin"
            android:text="تسجيل الدخول"
            android:textColor="@color/BlueColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@+id/gray_layout"
        app:layout_constraintEnd_toEndOf="@+id/gray_layout"
        app:layout_constraintStart_toStartOf="@+id/gray_layout"
        app:layout_constraintTop_toTopOf="@+id/gray_layout"
        app:srcCompat="@drawable/green_box" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_jf"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/BlueColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
